# rust-advent

./: Cargo.toml
input/2022/: 1-long.txt
src/: rust-advent-1.rs  rust-advent-2.rs
src/2019/: rust-advent-1.rs  rust-advent-2.rs  rust-advent-4.rs  rust-advent-5.rs  rust-advent-6.rs
src/2022/: rust-advent-1.rs
