[package]
name = "rust-advent"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "rust-advent-1-2019"
path = "src/2019/rust-advent-1.rs"

[[bin]]
name = "rust-advent-2-2019"
path = "src/2019/rust-advent-2.rs"

[[bin]]
name = "rust-advent-4-2019"
path = "src/2019/rust-advent-4.rs"

[[bin]]
name = "rust-advent-1-2022"
path = "src/2022/rust-advent-1.rs"

[dependencies]
